--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h3>欢迎来到我的网站</h3>
     <a href="https://github.com/">github主页</a>
     <a href="https://github.com/jahazv/jahazv_github.io">我的社区主页</a>
+    <a href="https://jahazv.github.io/123.html">123</a>
 </body>
 </html>
