--- a/456.html
+++ b/456.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport"content="width=device-width,initial-scale=1.0">
-    <title>456</title>
+    <title>风车的制作</title>
 </head>
 <body>
-    <h3>风车的制作</h3>
-    <h3>原料：彩色纸（较厚）、大头针、竹签或小木棍。</h3>
-    <h3>工具：剪刀、胶水。</h3>
-    <h3>步骤：</h3>
-    <h3>第一步：</h3>
+    <h3>风车的制作
+        原料：彩色纸（较厚）、大头针、竹签或小木棍。
+        工具：剪刀、胶水。
+        步骤：
+        第一步：彩色纸裁成正方形。
+        第二步：
+    </h3>
 </body>
 </html>
