--- a/456.html
+++ b/456.html
@@ -7,12 +7,16 @@
     <title>风车的制作</title>
 </head>
 <body>
+    <a href="https://jahazv.github.io">返回主页</a>
     <h3>风车的制作
-        原料：彩色纸（较厚）、大头针、竹签或小木棍。
-        工具：剪刀、胶水。
-        步骤：
-        第一步：彩色纸裁成正方形。
-        第二步：
-    </h3>
+    <h3>原料：彩色纸（较厚）、大头针、竹签或小木棍。</h3>
+    <h3>工具：剪刀、胶水。</h3>
+    <h3>步骤：</h3>
+    <h3>第一步：彩色纸裁成正方形。</h3>
+    <h3>第二步：将纸沿对角线对折，之后再对折，然后展开。</h3>
+    <h3>第三步：用剪刀</h3>
+    <h3></h3>
+    <h3></h3>
+    <h3></h3>
 </body>
 </html>
