--- a/123.html
+++ b/123.html
@@ -1,2 +1,12 @@
-<p>123</p>
-<h3>点赞</h3>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport"content="width=device-width,initial-scale=1.0">
+    <title>风车的制作</title>
+</head>
+<body>
+  <a href="https://jahazv.github.io">返回主页</a>
+  <p>123</p>
+  <h3>点赞</h3>
