--- a/123.html
+++ b/123.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport"content="width=device-width,initial-scale=1.0">
-    <title>风车的制作</title>
+    <title>123</title>
 </head>
 <body>
   <a href="https://jahazv.github.io">返回主页</a>
