--- a/456.html
+++ b/456.html
@@ -8,15 +8,16 @@
 </head>
 <body>
     <a href="https://jahazv.github.io">返回主页</a>
-    <h3>风车的制作
-    <h3>原料：彩色纸（较厚）、大头针、竹签或小木棍。</h3>
-    <h3>工具：剪刀、胶水。</h3>
+    <h3>风车的制作</h3>
+    <h3>需要准备：</h3>
+    <p>原料：彩色纸（较厚）、大头针、竹签或小木棍。</p>
+    <p>工具：剪刀、胶水。</p>
     <h3>步骤：</h3>
-    <h3>第一步：彩色纸裁成正方形。</h3>
-    <h3>第二步：将纸沿对角线对折，之后再对折，然后展开。</h3>
-    <h3>第三步：用剪刀</h3>
-    <h3></h3>
-    <h3></h3>
-    <h3></h3>
+    <p>第一步：彩色纸裁成正方形。</p>
+    <p>第二步：将纸沿对角线对折，之后再对折，然后展开。</p>
+    <p>第三步：用剪刀</p>
+    <p>第四步：</p>
+    <p>第五步：</p>
+    <p>第六步：</p>
 </body>
 </html>
