--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <a href="https://github.com/jahazv/jahazv_github.io">我的社区主页</a>
     <a href="https://jahazv.github.io/123.html">123</a>
     <a href="https://jahazv.github.io/456.html">风车的制作</a>
+    <a href="https://jahazv.github.io/ree..np4">视频</a>
 </body>
 </html>
