--- a/index.html
+++ b/index.html
@@ -10,8 +10,16 @@
     <h3>欢迎来到我的网站</h3>
     <a href="https://github.com/">github主页</a>
     <a href="https://github.com/jahazv/jahazv_github.io">我的社区主页</a>
+    <h3>第一个分区</h3>
+    <a href="https://www.microsoft.com/en-us/edge/surf/play?form=MT000J">
+        小游戏
+    </a>
+    <p> (用空格代替换行)</p>
+    <a href="https://jahazv.github.io/vs.html">VS开发人员命令提示
+        工具的基本操作
+    </a>
+    <p> </p>
     <a href="https://jahazv.github.io/123.html">123</a>
     <a href="https://jahazv.github.io/456.html">风车的制作</a>
-    <a href="https://jahazv.github.io/ree..np4">视频</a>
 </body>
 </html>
