--- a/picture.html
+++ b/picture.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport"content="width=device-width,initial-scale=1.0">
-    <title>123</title>
+    <title>我的网站</title>
 </head>
 <body>
-  <a href="https://jahazv.github.io">返回主页</a>
-  <p>123</p>
-  <h3>点赞</h3>
+    <a href="https://jahazv.github.io">返回主页</a>
+</body>
+</html>
