--- a/123.html
+++ b/123.html
@@ -7,6 +7,6 @@
     <title>123</title>
 </head>
 <body>
-  <a href="https://jahazv.github.io">返回主页</a>
+  <a href="index.html">返回主页</a>
   <p>123</p>
   <h3>点赞</h3>
