--- a/456.html
+++ b/456.html
@@ -7,7 +7,7 @@
     <title>风车的制作</title>
 </head>
 <body>
-    <a href="https://jahazv.github.io">返回主页</a>
+    <a href="index.html">返回主页</a>
     <h3>风车的制作</h3>
     <h3>需要准备：</h3>
     <p>原料：彩色纸（较厚）、大头针、竹签或小木棍。</p>
