--- a/abuot.html
+++ b/abuot.html
@@ -7,10 +7,10 @@
     <title>关于</title>
 </head>
 <body>
-    <a href="https://jahazv.github.io">返回主页</a>
+    <a href="index.html">返回主页</a>
     <h3>关于我的网站</h3>
-    <a href="https://github.com/jahazv/jahazv.github.io">网站源代码</a>
+    <a href="picture.html">网站</a><a href="beta/index.html">源</a><a href="picture.html">代码</a>
     <p>作者:jahazv</p>
-    <p>版本:v1.0.0</p>
+    <p>版本:v1.1.0</p>
 </body>
 </html>
