--- a/vs.html
+++ b/vs.html
@@ -7,7 +7,7 @@
     <title>VS开发人员命令提示工具的基本操作</title>
 </head>
 <body>
-    <a href="https://jahazv.github.io">返回主页</a>
+    <a href="index.html">返回主页</a>
     <h3>VS开发人员命令提示工具的基本操作</h3>
     <h3>防踩坑的关键点：</h3>
     <p> 1、空格</p>
@@ -39,6 +39,6 @@
     （０５是你要查看的类源文件的序号）</p>
     <p>    在这里插入图片描述</p>
     <p>(作者没有加图片)</p>
-    <a href="https://jahazv.github.io/vs.html">返回首页</a>
+    <a href="vs.html">返回首页</a>
 </body>
 </html>
