--- a/video.html
+++ b/video.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport"content="width=device-width,initial-scale=1.0">
-    <title>502</title>
+    <title>视频</title>
 </head>
-<body>
+<body> 
     <a href="index.html">返回主页</a>
-    <P>还没完善好</P>
+    <video width="900" height="500" controls>
+        <source src="a/ree.mp4" type="video/mp4">
+    </video>
 </body>
 </html>
