--- a/index.html
+++ b/index.html
@@ -24,5 +24,6 @@
     <a href="123.html">123</a>
     <a href="456.html">风车的制作</a>
     <a href="abuot.html">关于</a>
+    <a href="guios.html">guios网页端</a>
 </body>
 </html>
