--- a/index.html
+++ b/index.html
@@ -25,5 +25,6 @@
     <a href="456.html">风车的制作</a>
     <a href="abuot.html">关于</a>
     <a href="guios.html">guios网页端</a>
+    <a href="https://www.nnzkzs.com">南宁中考招生信息网</a>
 </body>
 </html>
