--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport"content="width=device-width,initial-scale=1.0">
+    <meta name="keywords" content="我的网站">
+    <meta name="description" content="自己开发,guios,自学html5,我的网站">
+    <link rel="icon" type="image/x-icon" href=".\favicon.ico">
+    <meta http-equiv="refresh" content="60">
     <title>我的网站</title>
 </head>
 <body>
