--- a/index.html
+++ b/index.html
@@ -30,5 +30,6 @@
     <a href="abuot.html">关于</a>
     <a href="guios.html">guios网页端</a>
     <a href="https://www.nnzkzs.com">南宁中考招生信息网</a>
+    <a href="/guios/guios.sb3">下载guios</a>
 </body>
 </html>
