--- a/audio.html
+++ b/audio.html
@@ -5,20 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport"content="width=device-width,initial-scale=1.0">
     <title>音频</title>
+    <link rel="icon" type="image/x-icon" href=".\favicon.ico">
 </head>
 <body> 
     <a href="index.html">返回主页</a>
-    <p>buttercup</p>
-    <audio controls>
-        <source src="a/buttercup.mp3"type="audio/mpeg">
-    </audio>
-    <p>早安大深林</p>
-    <audio controls>
-        <source src="a/DM_20230618121849_001.mp3"type="audio/mpeg">
-    </audio>
-    <p>Midnight_City</p>
-    <audio controls>
-        <source src="a/M83-Midnight_City.flac"type="audio/mpeg">
-    </audio>
+    <object data="a/DM_20230526210730_001.mp3">你的电脑或浏览器不支持该文件格式。</object>
 </body>
 </html>
