--- a/index.html
+++ b/index.html
@@ -7,29 +7,36 @@
     <meta name="keywords" content="我的网站">
     <meta name="description" content="自己开发,guios,自学html5,我的网站">
     <link rel="icon" type="image/x-icon" href=".\favicon.ico">
-    <meta http-equiv="refresh" content="60">
+    <meta http-equiv="refresh" content="120">
     <title>我的网站</title>
 </head>
 <body>
+    <div class="github-links"> 
+        <a href="https://github.com/"><img src="res/github_icon.png" alt="Github">github主页</a>
+        <a href="https://github.com/jahazv/jahazv.github.io"><img src="res/sequ.png" alt="社区主页图片" height="30" width="30">我的社区主页</a>
+    </div>
     <h3>欢迎来到我的网站</h3>
-    <a href="https://github.com/">github主页</a>
-    <a href="https://github.com/jahazv/jahazv.github.io">我的社区主页</a>
     <h3>第一个分区</h3>
     <a href="https://go.microsoft.com/fwlink/?linkid=2162539">
         小游戏
     </a>
     <p> (用空格代替换行)</p>
-    <a href="vs.html">VS开发人员命令提示
-        工具的基本操作
-    </a>
+    <p>（看来空格不能代替换行）</p>
+    <div class="help">
+    <a href="vs.html">VS开发人员命令提示工具的基本操作</a>
+    <a href="help_md.html">Markdown教程</a>
+    <a href="456.html">风车的制作</a>
+    </div>
     <a href="video.html">视频</a>
     <a href="audio.html">音频</a>
-    <p>（看来空格不能代替换行）</p>
     <a href="123.html">123</a>
-    <a href="456.html">风车的制作</a>
     <a href="abuot.html">关于</a>
     <a href="guios.html">guios网页端</a>
     <a href="https://www.nnzkzs.com">南宁中考招生信息网</a>
-    <a href="/guios/guios.sb3">下载guios</a>
+    <a href="/guios/guios.sb3">下载guios</a><br>
+    <script>
+        console.log("别以为我不知道你在看开发者工具");
+    </script> 
+    <noscript>你的浏览器太旧了，不支持javascript</noscript>
 </body>
 </html>
