--- a/123.html
+++ b/123.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport"content="width=device-width,initial-scale=1.0">
     <title>123</title>
+    <link rel="icon" type="image/x-icon" href=".\favicon.ico">
+    <link rel="stylesheet" href="css/_main.css">
 </head>
 <body>
   <a href="index.html">返回主页</a>
