--- a/456.html
+++ b/456.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport"content="width=device-width,initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href=".\favicon.ico">
+    <link rel="stylesheet" href="css/_main.css">
     <title>风车的制作</title>
 </head>
 <body>
     <a href="index.html">返回主页</a>
     <h3>风车的制作</h3>
+    <i>未完工</i>
     <h3>需要准备：</h3>
     <p>原料：彩色纸（较厚）、大头针、竹签或小木棍。</p>
     <p>工具：剪刀、胶水。</p>
